// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner/> render properly with just a sub-title 1`] = `
<div
  class="StyledBanner__Container-j7lj91-0 hqpgly"
>
  <h2
    class="StyledBanner__SubTitle-j7lj91-2 dkAUwh"
  >
    Watch anywhere
  </h2>
</div>
`;

exports[`<Banner/> render properly with just a title 1`] = `
<div
  class="StyledBanner__Container-j7lj91-0 hqpgly"
>
  <h1
    class="StyledBanner__Title-j7lj91-1 edfCjK"
  >
    Unlimited films
  </h1>
</div>
`;

exports[`<Banner/> render properly with sub-components & children 1`] = `
<div
  class="StyledBanner__Container-j7lj91-0 hqpgly"
>
  <h1
    class="StyledBanner__Title-j7lj91-1 edfCjK"
  >
    Unlimited movies
  </h1>
  <h2
    class="StyledBanner__SubTitle-j7lj91-2 dkAUwh"
  >
    Watch anywhere
  </h2>
</div>
`;
